fixed footer on every page and fixed stretched image

--- a/meettheteam.css
+++ b/meettheteam.css
@@ -15,7 +15,7 @@ body{
     margin: 0;
     height: 100vh;
     font-family: "Arimo-Regular", sans-serif;
-    padding:30px;
+    
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
